[gd_scene load_steps=9 format=2]

[ext_resource path="res://objects/spike/spike.gd" type="Script" id=1]
[ext_resource path="res://interface/juiceness/score_pop.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/spike/sprite.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 32, 56 )

[sub_resource type="Animation" id=2]

resource_name = "show"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Curve" id=3]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]

flags = 4
width = 2048
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]

render_priority = 0
trail_divisor = 1
emission_shape = 1
emission_sphere_radius = 36.0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.5
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 10.0
scale_random = 1.0
scale_curve = SubResource( 4 )
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Orbit Velocity", "Scale" ]

[node name="spike" type="Node2D"]

script = ExtResource( 1 )
score = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="." index="0"]

self_modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 0.628099, 0.628099 )
texture = ExtResource( 3 )
offset = Vector2( 0, -64 )
_sections_unfolded = [ "Visibility" ]

[node name="spike" type="Area2D" parent="." index="1" groups=[
"spike",
]]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="shape" type="CollisionPolygon2D" parent="spike" index="0"]

build_mode = 0
polygon = PoolVector2Array( -24, 0, 24, 0, 0, -80 )
disabled = true

[node name="score" type="Area2D" parent="." index="2" groups=[
"spike",
]]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="shape" type="CollisionShape2D" parent="score" index="0"]

position = Vector2( 0, -128 )
shape = SubResource( 1 )

[node name="animation_player" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("..")
autoplay = "show"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/show = SubResource( 2 )
blend_times = [  ]

[node name="particles_2d" type="Particles2D" parent="." index="4"]

position = Vector2( 0, -40 )
emitting = false
amount = 32
lifetime = 1.0
one_shot = true
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 5 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Process Material", "Time" ]

[node name="life_time" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 4.0
one_shot = true
autostart = true

[connection signal="body_entered" from="spike" to="." method="_on_spike_body_entered"]

[connection signal="body_exited" from="score" to="." method="_on_score_body_exited"]

[connection signal="timeout" from="life_time" to="." method="_on_life_time_timeout"]


